# vncs

./: .clang-format  CMakeLists.txt  example.cpp  main.cpp
include/vncs/: app.hpp  app_factory.hpp  client_list.hpp  framebuffer_update.hpp  server.hpp
src/: app.cpp  binary_writer.cpp  binary_writer.hpp  client.cpp  client.hpp  client_list.cpp  encoding.hpp  message_parser.cpp  message_parser.hpp  messages.hpp  null_security.cpp  null_security.hpp  pixel_format.cpp  pixel_format.hpp  rgb_buffer_view.hpp  security.hpp  server.cpp  server_message_type.hpp  string_view.cpp  string_view.hpp
